--- a/metadata_collector/Gemfile
+++ b/metadata_collector/Gemfile
@@ -16,4 +16,5 @@ gem 'berkshelf'
 
 gem "test-kitchen"
 gem "kitchen-vagrant"
+gem 'multipart-post'
 gem 'slackr', :git => 'git://github.com/risk-io/slackr.git'
