[JPC] 3i-rsyslog chef 15+ compliant

--- a/3i-rsyslog/.kitchen.yml
+++ b/3i-rsyslog/.kitchen.yml
@@ -1,16 +1,41 @@
 ---
 driver:
-  name: vagrant
+  name: dokken
+  use_sudo: false
+  privileged: true
+
+transport:
+  name: dokken
 
 provisioner:
-  name: chef_solo
+  name: dokken
+
+verifier:
+  name: inspec
 
 platforms:
-  - name: ubuntu-14.04
-  - name: centos-7.1
+  - name: ubuntu-18.04
+    driver:
+      image: dokken/ubuntu-18.04
+      pid_one_command: /bin/systemd
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update -y
+        - RUN /usr/bin/apt-get install sudo -y
+
+  - name: ubuntu-16.04
+    driver:
+      image: dokken/ubuntu-16.04
+      pid_one_command: /bin/systemd
+      intermediate_instructions:
+        - RUN /usr/bin/apt-get update -y
+        - RUN /usr/bin/apt-get install sudo -y
 
 suites:
   - name: default
-    run_list:
-      - recipe[3i-rsyslog::default]
+    # run_list:
+    #   - recipe[3i-rsyslog::configure]
+    #   - recipe[3i-rsyslog::setup]
+    verifier:
+      inspec_tests:
+        - test/integration/default
     attributes:
